[ci] Update CI to test under jdk21