@@ -49,7 +49,8 @@ under the License.
         <log4j2.version>2.23.1</log4j2.version>
         <slf4j.version>1.7.36</slf4j.version>
         <assertj.version>3.23.1</assertj.version>
-        <mockito.version>5.8.0</mockito.version>
+        <mockito.version>5.14.2</mockito.version>
+        <bytebuddy.version>1.15.4</bytebuddy.version>
         <gpg.useagent>true</gpg.useagent>
         <arguments />
     </properties>
@@ -96,6 +97,12 @@ under the License.
             <version>${mockito.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>net.bytebuddy</groupId>
+            <artifactId>byte-buddy</artifactId>
+            <version>${bytebuddy.version}</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <profiles>
@@ -108,6 +115,17 @@ under the License.
                 <target.java.version>11</target.java.version>
                 <maven.compiler.source>11</maven.compiler.source>
                 <maven.compiler.target>11</maven.compiler.target>
+            </properties>
+        </profile>
+
+        <profile>
+            <id>java-21</id>
+            <activation>
+                <jdk>[21,)</jdk>
+            </activation>
+            <properties>
+                <!-- Skip spotless for jdk21, as the version of spotless plugin doesn't support jdk21. -->
+                <spotless.skip>true</spotless.skip>
             </properties>
         </profile>
 
@@ -288,7 +306,10 @@ under the License.
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
-                    <argLine>--add-opens=java.base/java.util=ALL-UNNAMED</argLine>
+                    <argLine>
+                        --add-opens=java.base/java.util=ALL-UNNAMED
+                        --add-exports=java.base/jdk.internal.vm=ALL-UNNAMED
+                    </argLine>
                 </configuration>
             </plugin>
         </plugins>
