@@ -146,6 +146,8 @@ fi
 cd "$python_dir"
 uv pip install apache-flink~=${DEFAULT_FLINK_VERSION}.0
 
+export JVM_ARGS="${JVM_ARGS} --add-exports java.base/jdk.internal.vm=ALL-UNNAMED"
+
 run_test "Resource Cross-Language end-to-end test in Java" "run_resource_cross_language_test_in_java"
 run_test "Resource Cross-Language end-to-end test in Python" "run_resource_cross_language_test_in_python"
 run_test "Agent plan compatibility end-to-end test" "run_agent_plan_compatibility_test"
